--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
+    "d3": "^7.8.2",
     "primeicons": "^6.0.1",
     "primereact": "^9.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.3.2",
     "three": "^0.149.0",
     "web-vitals": "^2.1.4"
   },
